--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -12,11 +12,11 @@ html {
 }
 
 body {
-  color: var(--text-color);
+  background-color: var(--text-color);
 }
 
 a {
-  color: var(--text-color);
+  background-color: var(--text-color);
 }
 
 .visually-hidden {
