--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -12,13 +12,21 @@ html {
 }
 
 body {
-  background-color: var(--text-color);
+  color: var(--text-color);
 }
 
 a {
-  background-color: var(--text-color);
+  color: var(--text-color);
 }
 
 .visually-hidden {
   display: none;
+}
+
+.card-category {
+  color: var(--color-primary);
+}
+
+.section-tagline {
+  color: var(--color-primary);
 }
