--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -487,7 +487,7 @@ a:active {
 .nav {
   margin: 0;
   padding: 0;
-  list-style-type: none;
+  list-style: none;
   text-align: center;
 }
 
@@ -505,6 +505,6 @@ a:active {
   padding: 0.5rem 1rem;
 }
 
-.nav-link:hover {
+.nav .nav-link:hover {
   color: var(--nav-item-link-hover);
 }
