--- a/0x03-responsive_design/06-styles.css
+++ b/0x03-responsive_design/06-styles.css
@@ -326,6 +326,7 @@ main img {
   padding: 2.5rem;
   position: relative;
   user-select: none;
+  display: none;
 }
 
 .header .menu-icon .navicon {
@@ -1016,6 +1017,6 @@ main img {
 
 @media screen and (min-width: 481px) and (max-width: 767px) {
   .header-logo {
-  flex-basis: 79%;
+    flex-basis: 79%;
   }
 }
